# cmake-glfw

./: CMakeLists.txt  README.md  main.cpp  shader.h
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: base.vs
